generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator dbml {
  provider = "prisma-dbml-generator"
}

enum Frequency {
  DAILY
  WEEKLY
  MONTHLY
  YEARLY
  OTHER
}

enum IncomeCategory {
  SALARY
  ALLOWANCE
  COMMISSION
  INVESTMENT
  INTEREST
  ROYALTY
  FREELANCE
  OTHER
}

enum ExpenseCategory {
  HOUSING
  TRANSPORT
  HEALTH
  GROCERIES
  FOOD
  SHOPPING
  INSURANCE
  ENTERTAINMENT
  SUBSCRIPTION
  OTHER
}

enum NotificationType {
  REMINDER
  ALERT
}

model User {
  id                 String               @id @default(uuid())
  username           String               @unique
  email              String?              @unique
  fullname           String?
  password           String
  avatar             String?
  dob                DateTime?
  gender             String?
  createdAt          DateTime             @default(now())
  updatedAt          DateTime             @updatedAt
  incomes            Income[]
  expenses           Expense[]
  savings            Saving[]
  notifications      Notification[]
  SurveyData         SurveyData[]
  TransactionHistory TransactionHistory[]
  Card               Card[]
  ChatSession        ChatSession[]
}

model Income {
  id                 Int                  @id @default(autoincrement())
  title              String
  description        String?
  amount             Float
  frequency          Frequency?
  date               DateTime?
  category           IncomeCategory?
  user               User                 @relation(fields: [userId], references: [id])
  userId             String
  TransactionHistory TransactionHistory[]
  cardId             Int?
  card               Card?                @relation(fields: [cardId], references: [id])
  createdAt          DateTime             @default(now())
  updatedAt          DateTime             @updatedAt
}

model Card {
  id                 Int                  @id @default(autoincrement())
  title              String
  balance            Float?               @default(0)
  createdAt          DateTime             @default(now())
  updatedAt          DateTime             @updatedAt
  Income             Income[]
  userId             String
  user               User                 @relation(fields: [userId], references: [id])
  TransactionHistory TransactionHistory[]
}

model Expense {
  id                 Int                  @id @default(autoincrement())
  title              String
  description        String?
  amount             Float
  frequency          Frequency?
  date               DateTime?
  category           ExpenseCategory?
  createdAt          DateTime             @default(now())
  updatedAt          DateTime             @updatedAt
  user               User                 @relation(fields: [userId], references: [id])
  userId             String
  TransactionHistory TransactionHistory[]
}

model Saving {
  id                 Int                  @id @default(autoincrement())
  title              String
  description        String?
  targetAmount       Float
  savedAmount        Float?               @default(0)
  monthlySaving      Float?
  dueDate            DateTime?
  createdAt          DateTime             @default(now())
  updatedAt          DateTime             @updatedAt
  user               User                 @relation(fields: [userId], references: [id])
  userId             String
  TransactionHistory TransactionHistory[]
}

enum TransactionType {
  SAVING
  EXPENSE
  INCOME
}

model TransactionHistory {
  id        Int             @id @default(autoincrement())
  title     String?
  amount    Float
  type      TransactionType
  createdAt DateTime        @default(now())
  updatedAt DateTime        @updatedAt
  expenseId Int?
  expense   Expense?        @relation(fields: [expenseId], references: [id])
  savingId  Int?
  saving    Saving?         @relation(fields: [savingId], references: [id])
  userId    String
  user      User            @relation(fields: [userId], references: [id])
  incomeId  Int?
  income    Income?         @relation(fields: [incomeId], references: [id])

  cardId Int?
  card   Card? @relation(fields: [cardId], references: [id])
}

model Notification {
  id        Int      @id @default(autoincrement())
  title     String
  message   String
  time      DateTime
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  isRead    Boolean
  user      User     @relation(fields: [userId], references: [id])
  userId    String
}

model SurveyData {
  user                  User               @relation(fields: [userId], references: [id])
  userId                String             @id
  monthlyIncome         Float?
  financialLiteracy     FinancialLiteracy?
  maxSpending           ExpenseCategory?
  avgMonthlySpending    Float?
  monthlySaving         Float?
  financialGoalPriority String?
  importantAppFeature   String?
}

enum FinancialLiteracy {
  BEGINNER
  INTERMEDIATE
  ADVANCED
}

model ChatSession {
  id        String    @id @default(cuid())
  userId    String?
  user      User?     @relation(fields: [userId], references: [id])
  createdAt DateTime  @default(now())
  messages  Message[]
}

enum MessageType {
  regular
  userData
  insight
}

model Message {
  id          String       @id @default(cuid())
  createdAt   DateTime     @default(now())
  role        String // 'user' or 'assistant'
  messageType MessageType? @default(regular)
  content     String
  sessionId   String
  session     ChatSession  @relation(fields: [sessionId], references: [id])
}
